# agentic-llm-for-better-results

./: .env.template  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
components/: index.html
components/crews/: index.html
components/embedding_models/: index.html
components/llm_models/: index.html
components/query_engine/: index.html
configuration/: index.html
crews/: index.html
crews/combined/: index.html
crews/market_data/: index.html
crews/news/: index.html
crews/sec/: index.html
data/: README.md  index.html
data/benzinga_news/AAPL/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/AMD/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/AMZN/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/COIN/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/GOOG/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/GOOGL/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/META/: 2024-10-01_2024-11-10.pkl  2024-10-15_2024-11-10.pkl
data/benzinga_news/MSFT/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/NVDA/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/PLTR/: 2024-10-15_2024-11-10.pkl
data/benzinga_news/TSLA/: 2024-10-15_2024-11-10.pkl
data/fpb/: fpb.ipynb
data/fundamentals/: index.html
data/fundamentals/AAPL/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/AMD/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/AMZN/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/COIN/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/GOOG/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/META/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/MSFT/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/NVDA/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/PLTR/: balance_quarterly.csv  income_quarterly.csv
data/fundamentals/TSLA/: balance_quarterly.csv  income_quarterly.csv
data/news/: index.html
data/sec/: index.html
data/sec/parsing/: index.html
development/: index.html
docs/: configuration.md  index.md  settings.md
docs/components/: crews.md  data.md  embedding_models.md  index.md  llm_models.md  packages.md
docs/crews/: index.md
docs/data/: fundamentals.md  index.md  news.md  sec_filings.md
docs/data/sec/: index.md  parsing.md
docs/tutorial/: news.md
examples/: crew_result_NVDA 2.md  crew_result_NVDA.md
examples/combined/APP_gpt-4o_2025-01-21/: index.html
examples/combined/NVDA_gpt-4o-mini_2024-11-18/: index.html
examples/combined/NVDA_gpt-4o_2024-11-18/: index.html
examples/market_data/META_gpt-4o-mini_2024-11-18/: index.html
examples/market_data/META_gpt-4o_2024-11-18/: index.html
examples/market_data/META_llama3-8b_2024-11-18/: index.html
examples/news/NVDA_gpt-4o-mini_2024-11-18/: index.html
examples/news/NVDA_llama3-8b_2024-11-18/: index.html
examples/news/TSLA_gpt-4o-mini_2024-11-18/: index.html
examples/news/TSLA_llama3-8b_2024-11-18/: index.html
examples/sec_mda_risk_factors/META_gpt-4o_2024-11-18/: index.html
examples/sec_mda_risk_factors/NVDA_gpt-4o_2024-11-18/: index.html
examples_index/: index.html
experiments/: README.md  crewAI_skeleton.ipynb  gemini.ipynb  huggingface.ipynb
experiments/crewai_with_osm/: crew-test-client.ipynb  crew.py
experiments/finbert test/: code.ipynb
experiments/finbert_test/: README.md  code.ipynb
experiments/news_agent/: README.md  constants.py  news_fetcher.py  query_news.py  utils.py
experiments/query_sec_filing/: Makefile  README.md  constants.py  query_filing.ipynb  utils.py
experiments/sec_agent/: constants.py  sec_tool.py  test_sec_tool.py
experiments/sec_filing_parsing/: README.md  main.py  sec_parser.py
experiments/sentiment_agent/: README.md  config.py  roberta.py  sa_agent.py  util.py
experiments/testing_agent_tool/: testing_different_tools_on_simple_data_-_EXPERIMENTATION.ipynb
experiments/yf_with_crewai/: README.md  crew.py  mine.ipynb  requirements.txt
finmanalysis/panel/: app.py  constants.py
finmas/: constants.py  logger.py  utils.py
finmas/cli/: main.py
finmas/crews/: __init__.py  model_provider.py  types.py  utils.py
finmas/data/: __init__.py  fundamental.py  price.py
finmas/news/: __init__.py  benzinga_news.py  news_fetcher.py  utils.py  yahoo_news.py
finmas/panel/: about.md  app.py  formatting.py  plotting.py  query.md
finmas/sec/: sec_tool.py
finmas/utils/: common.py
notebooks/: combined_analysis.ipynb  market_data_analysis.ipynb  news_analysis.ipynb  sec_filing_analysis.ipynb  sec_filings.ipynb  sec_filings_parsing.ipynb
search/: search_index.json
tutorial/: index.html
tutorial/news/: index.html
untitled folder/: testing different tools on simple data - EXPERMENTATION.ipynb
(+59 files in other folders)
