[project]
name = "agentic-llm-for-better-results"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "cohere>=5.9.2",
  "crewai>=0.61",
  "crewai-tools>=0.12.1",
  "datasets>=3",
  "edgartools>=2.31",
  "feedparser>=6.0.11",
  "great-tables>=0.11.1",
  "ipywidgets>=8.1.5",
  "jupyterlab>=4.2.5",
  "jupyterlab-quarto>=0.3.5",
  "langchain>=0.2.16",
  "matplotlib>=3.9.2",
  "pandas>=2.2.2",
  "seaborn>=0.13.2",
  "spacy>=3.7.6",
  "tabulate>=0.9",
  "transformers>=4.44.2",
  "typer>=0.12.5",
]

[tool.ruff]
line-length = 100
lint.extend-per-file-ignores."__init__.py" = [
  "F401",
  "F403",
]

lint.unfixable = [
  "F401", # F401 unused imports
]

[tool.uv]
dev-dependencies = [
  "pre-commit>=3.8.0",
]
